Frontend url added

--- a/backend/.env
+++ b/backend/.env
@@ -2,3 +2,5 @@ MONGODB_URL=mongodb+srv://niseeaniket:ogCS9RvfdalH8pko@moodyplayer.z2z60wa.mongo
 IMAGEKIT_PUBLIC_KEY=public_CZhn9Xiy4/b8U3pMdVFHnbYiDG0=
 IMAGEKIT_PRIVATE_KEY=private_8x6fdMl5TAoDaQ0jgv+1R3TA3+M=
 IMAGEKIT_URL_ENDPOINT=https://ik.imagekit.io/devaniket
+FRONTEND_URL=https://moodify-woad.vercel.app
+PORT=3000
